# antennavision

./: .clang-format  .gitignore  CMakeLists.txt  agenda.md  benchmark  el.txt  main.cpp  measure-compilation-time  measure-compile-time  setup.diagnostic  setup.json  setup.report  sync  test-view.js
include/: bitmap.hpp  builtin.hpp  dynarray.hpp  geometry.hpp  jsonutil.hpp  manifest.hpp  math.hpp  plot.hpp  print.hpp  reference.hpp  setup.hpp  simulationerror.hpp  three.hpp  timeutil.hpp  types.hpp
include/builtin/: t00.hpp
include/components/: component.hpp  customradiator.hpp  hertziandipole.hpp  isotropicradiator.hpp  radiator.hpp  radiatorarray.hpp  source.hpp  testradiator.hpp  ula.hpp.off
include/factory/: find.hpp  get.hpp  make.hpp  parse.hpp
reports-sirious/: .txt  main.txt
reports-sirious/src/: bitmap.txt  manifest.txt  math.txt  plot.txt  reference.txt  setup.txt  three.txt
reports-sirious/src/components/: component.txt  customradiator.txt  hertziandipole.txt  isotropicradiator.txt  radiator.txt  source.txt  testradiator.txt
reports-sirious/src/factory/: get.txt  make.txt  parse.txt
reports-sirious/test/: test_cascaded_references.txt  test_hertziandipole.txt  test_setup.txt  test_single_reference.txt  testutil.txt
results/test-directivity/: objects.js  plot_directivity_over_polar.CustomRadiator.0.00_0.50_1.00.json  plot_directivity_over_polar.HertzianDipole.0.00_1.00.json  timestamp
results/test-gain-straight/: objects.js  plot_gain_over_straight.transmitter.receiver_x.x.json  plot_gain_over_straight.transmitter.receiver_z.z.json  timestamp
results/ula-beamwidth/: objects.js  timestamp
results/ula-plane/: objects.js  timestamp
setups/: .ula-beamwidth.json.kate-swp  future.json.off  setup.json  test-directivity.json  test-directivity.json.off  test-gain-straight.json  test-gain-straight.json.off  test-ula.json  test-ula.json.off  ula-beamwidth.json  ula-plane.json
src/: bitmap.cpp  builtin.cpp  geometry.cpp  manifest.cpp  math.cpp  plot.cpp  reference.cpp  setup.cpp  three.cpp  timeutil.cpp
src/builtin/: t00.cpp
src/components/: component.cpp  customradiator.cpp  hertziandipole.cpp  isotropicradiator.cpp  radiator.cpp  radiatorarray.cpp  source.cpp  testradiator.cpp
src/factory/: get.cpp  make.cpp  parse.cpp
test/: test_basic_radiators.cpp  test_cascaded_references.cpp  test_gain.cpp  test_hertziandipole.cpp  test_radiator.cpp  test_setup.cpp  test_setup_context.cpp  test_setup_reference.cpp  test_single_reference.cpp  test_ula.cpp  testutil.cpp  testutil.hpp
viewer/: run-server  test.html
